dark mode fix

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,49 +1,9 @@
 :root {
-    --ion-background-color: #68181b;
+    --ion-background-color: #060606;
     --ion-background-color-rgb: 104,24,27;
 
     --ion-text-color: #000000;
     --ion-text-color-rgb: 0,0,0;
-
-    --ion-text-color-step-50: #050101;
-    --ion-text-color-step-100:rgb(17, 14, 14)3;
-    --ion-text-color-step-150: #100404;
-    --ion-text-color-step-200: #150505;
-    --ion-text-color-step-250: #1a0607;
-    --ion-text-color-step-300: #1f0708;
-    --ion-text-color-step-350: #240809;
-    --ion-text-color-step-400: #2a0a0b;
-    --ion-text-color-step-450: #2f0b0c;
-    --ion-text-color-step-500: #340c0e;
-    --ion-text-color-step-550: #390d0f;
-    --ion-text-color-step-600: #3e0e10;
-    --ion-text-color-step-650: #441012;
-    --ion-text-color-step-700: #491113;
-    --ion-text-color-step-750: #4e1214;
-    --ion-text-color-step-800: #531316;
-    --ion-text-color-step-850: #581417;
-    --ion-text-color-step-900: #5e1618;
-    --ion-text-color-step-950: #63171a;
-
-    --ion-background-color-step-50: #63171a;
-    --ion-background-color-step-100: #5e1618;
-    --ion-background-color-step-150: #581417;
-    --ion-background-color-step-200: #531316;
-    --ion-background-color-step-250: #4e1214;
-    --ion-background-color-step-300: #491113;
-    --ion-background-color-step-350: #441012;
-    --ion-background-color-step-400: #3e0e10;
-    --ion-background-color-step-450: #390d0f;
-    --ion-background-color-step-500: #340c0e;
-    --ion-background-color-step-550: #2f0b0c;
-    --ion-background-color-step-600: #2a0a0b;
-    --ion-background-color-step-650: #240809;
-    --ion-background-color-step-700: #1f0708;
-    --ion-background-color-step-750: #1a0607;
-    --ion-background-color-step-800: #150505;
-    --ion-background-color-step-850: #100404;
-    --ion-background-color-step-900: #0a0203;
-    --ion-background-color-step-950: #050101;
 
 	--ion-color-primary: #88383b;
 	--ion-color-primary-rgb: 136,56,59;
@@ -108,5 +68,5 @@
 	--ion-color-dark-shade: #292929;
 	--ion-color-dark-tint: #444444;
 
-    --ion-item-background: #68181b;
+    --ion-item-background: #1e1e1e;
 }
